move context to jvm.md